--- a/src/assets/styles/scss/pages/_about.scss
+++ b/src/assets/styles/scss/pages/_about.scss
@@ -11,6 +11,10 @@
         color: $purple;
     }
 
+    p {
+        margin-top: 10px;
+    }
+
     .socials {
         text-align: center;
         font-size: 48px;
@@ -18,6 +22,7 @@
 
         &__icon {
             margin: 30px;
+            color: $purple;
         }
     }
 }
