Added and designed project cards

--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -11,8 +11,9 @@
 // 4. LAYOUT
 @use "layout/header";
 // 5. COMPONENTS
-
+@use "components/cards";
 // 6. PAGES
 @use "pages/home";
 @use "pages/about";
+@use "pages/portfolio";
 // 7. THEMES
