Modified UI design, implemented semantic HTML

--- a/src/assets/styles/scss/base/_typography.scss
+++ b/src/assets/styles/scss/base/_typography.scss
@@ -1,5 +1,18 @@
+@use "../abstracts/variables" as *;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
 
 body {
     font-family: 'Inter', sans-serif;
+}
+
+h2 {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 48px;
+    color: $purple;
+}
+
+h3 {
+    font-size: 28px;
+    font-weight: 400;
 }
