--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -10,6 +10,7 @@
 @use "base/typography";
 // 4. LAYOUT
 @use "layout/header";
+@use "layout/footer";
 // 5. COMPONENTS
 @use "components/cards";
 // 6. PAGES
