--- a/src/assets/styles/scss/components/_cards.scss
+++ b/src/assets/styles/scss/components/_cards.scss
@@ -1,10 +1,12 @@
+@use "../abstracts/variables" as *;
+
 .cards-container {
     display: grid;
     row-gap: 10px;
 
     .card {
         width: 330px;
-        border: 1px solid #dddddd;
+        border: 1px solid $lightgray;
         border-radius: 10px;
         padding: 5px;
     
