--- a/src/assets/styles/scss/components/_cards.scss
+++ b/src/assets/styles/scss/components/_cards.scss
@@ -4,11 +4,17 @@
     display: grid;
     row-gap: 10px;
 
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
     .card {
         width: 330px;
         border: 1px solid $lightgray;
         border-radius: 10px;
         padding: 5px;
+        text-decoration: none;
     
         img {
             height: 180px;
