--- a/src/assets/styles/scss/layout/_header.scss
+++ b/src/assets/styles/scss/layout/_header.scss
@@ -16,9 +16,11 @@
         
         h3 {
             font-weight: 500;
+            font-size: 18px;
         }
     }
 
+    // Replace navigation with hamburger menu
     .nav-container {
         @include flexbox-centered(space-evenly);
     
@@ -58,4 +60,10 @@
             }
         }
     }
+}
+
+@media screen and (min-width: 768px) {
+    
+
+    // Normal navigation
 }
