--- a/src/assets/styles/scss/pages/_about.scss
+++ b/src/assets/styles/scss/pages/_about.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/placeholders" as *;
 
 .about {
-    width: 600px;
+    width: 400px;
     margin: 0 auto;
     padding-top: 30px;
 
@@ -19,5 +19,17 @@
             margin: 30px;
             color: $purple;
         }
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .about {
+        width: 450px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .about {
+        width: 600px;
     }
 }
