--- a/src/assets/styles/scss/pages/_home.scss
+++ b/src/assets/styles/scss/pages/_home.scss
@@ -3,39 +3,74 @@
 
 .home {
     padding: 30px 70px 10px;
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    text-align: center;
 
-    &__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    h1 {
+        font-size: 42px;
+
+        span {
+            color: $purple;
+        }
+    }
+
+    img {
+        height: 420px;
+        filter: blur(6px);
+        padding: 35px 0 25px;
+        margin: 0 auto;
+    }
+
+    h3 {
+        font-size: 18px;
+        padding-top: 20px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .home {
+        grid-template-columns: 2fr 1fr;
 
         h1 {
-            font-size: 84px;
+            font-size: 56px;
+        }
 
-            span {
-                color: $purple;
-            }
+        h3 {
+            font-size: 24px;
+        }
+
+        h1, h3 {
+            text-align: left;
+        }
+
+        img {
+            height: 445px;
+            padding: 0;
+            margin-left: auto;
         }
     }
+}
 
-    &__profile {
+@media screen and (min-width: 992px) {
+    .home {
+        h1 {
+            font-size: 68px;
+        }
+
+        h3 {
+            font-size: 28px;
+        }
+
         img {
             height: 500px;
-            filter: blur(10px);
         }
     }
+}
 
-    .purple-cube {
-        width: 150px;
-        height: 150px;
-        background-color: $purple;
-        position: absolute;
-        bottom: 25px;
-        right: 310px;
-        opacity: 0.5;
-        border-radius: 5px;
-        box-shadow: 0px 0px 6px 6px $purple;
+@media screen and (min-width: 1200px) {
+    .home {
+        h1 {
+            font-size: 84px;
+        }
     }
 }
