--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -13,6 +13,7 @@
 @use "layout/footer";
 // 5. COMPONENTS
 @use "components/cards";
+@use "components/dropdown";
 // 6. PAGES
 @use "pages/home";
 @use "pages/about";
