--- a/src/assets/styles/scss/pages/_portfolio.scss
+++ b/src/assets/styles/scss/pages/_portfolio.scss
@@ -3,6 +3,11 @@
 .portfolio {
     padding-top: 30px;
 
+    p {
+        text-align: center;
+        padding: 165px 0;
+    }
+
     .projects-container {
         display: flex;
         justify-content: space-evenly;
@@ -19,6 +24,11 @@
 
 @media screen and (min-width: 768px) {
     .portfolio {
+
+        p {
+            padding: 155px 0;
+        }
+
         .projects-container {
             flex-direction: row;
         }
